--- a/index.html
+++ b/index.html
@@ -18,23 +18,20 @@
   </head>
   <body>
     <div id="app"></div>
-
-
-
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/swiper.min.js"></script>
-    <script src="/js/jquery.appear.js"></script>
-    <script src="/js/wow.min.js"></script>
-    <script src="/js/countUp.min.js"></script>
-    <script src="/js/pkgd.min.js"></script>
-    <script src="/js/imagesLoaded.min.js"></script>
-    <script src="/js/parallax-scroll.js"></script>
-    <script src="/js/popup.min.js"></script>
-    <script src="/js/gmap.min.js"></script>
+    <script src="https://saaspik.pixelsigns.art/saaspik/dependencies/jquery/jquery.min.js"></script>
+    <script src="https://saaspik.pixelsigns.art/saaspik/dependencies/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://saaspik.pixelsigns.art/saaspik/dependencies/swiper/js/swiper.min.js"></script>
+    <script src="https://saaspik.pixelsigns.art/saaspik/dependencies/jquery.appear/jquery.appear.js"></script>
+    <script src="https://saaspik.pixelsigns.art/saaspik/dependencies/wow/js/wow.min.js"></script>
+    <script src="https://saaspik.pixelsigns.art/saaspik/dependencies/countUp.js/countUp.min.js"></script>
+    <script src="https://saaspik.pixelsigns.art/saaspik/dependencies/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="https://saaspik.pixelsigns.art/saaspik/dependencies/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="https://saaspik.pixelsigns.art/saaspik/dependencies/jquery.parallax-scroll/js/jquery.parallax-scroll.js"></script>
+    <script src="https://saaspik.pixelsigns.art/saaspik/dependencies/magnific-popup/js/jquery.magnific-popup.min.js"></script>
+    <script src="https://saaspik.pixelsigns.art/saaspik/dependencies/gmap3/js/gmap3.min.js"></script>
     <script type='text/javascript' src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDk2HrmqE4sWSei0XdKGbOMOHN3Mm2Bf-M&#038;ver=2.1.6'></script>
-    <script src="/js/header.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="https://saaspik.pixelsigns.art/saaspik/assets/js/header.js"></script>
+    <script src="https://saaspik.pixelsigns.art/saaspik/assets/js/app.js"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
